# parx

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
docs/devlog/: milestone-0.md
engine/: CMakeLists.txt
engine/assets/include/parx/assets/: assets.hpp
engine/input/include/parx/input/: input.hpp
engine/platform/include/parx/platform/: platform.hpp
engine/renderer/include/parx/renderer/: renderer.hpp
engine/scene/include/parx/scene/: scene.hpp
sandbox/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
